<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.frshdn</groupId>
    <artifactId>subethasmtp-java17</artifactId>
    <version>3.1.7</version>
    <name>SubEtha SMTP - java17</name>
    <description>
        SubEtha SMTP is an easy-to-use server-side SMTP library for Java.
    </description>
    <url>https://github.com/FrshDn/subethasmtp</url>
    <inceptionYear>2006</inceptionYear>

    <scm>
        <connection>scm:git:https://github.com/frshdn/subethasmtp-java17.git</connection>
        <developerConnection>scm:git:https://github.com/frshdn/subethasmtp-java17.git</developerConnection>
        <url>scm:git:https://github.com:frshdn/subethasmtp-java17.git</url>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>Apache 2.0</name>
            <url>http://code.google.com/p/subethasmtp/source/browse/trunk/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>latchkey</id>
            <name>Jon Stevens</name>
            <roles>
                <role>Project Owner</role>
            </roles>
        </developer>
        <developer>
            <id>lhoriman</id>
            <name>Jeff Schnitzer</name>
            <roles>
                <role>Project Owner</role>
            </roles>
        </developer>
        <developer>
            <id>scotthernandez</id>
            <name>Scott Hernandez</name>
            <roles>
                <role>Project Owner</role>
            </roles>
        </developer>
        <developer>
            <id>jeffjjensen</id>
            <name>Jeff Jensen</name>
            <timezone>-6</timezone>
            <roles>
                <role>Committer</role>
            </roles>
        </developer>
        <developer>
            <id>hontvari.jozsef.levente</id>
            <name>Hontvári József Levente</name>
            <timezone>+1</timezone>
            <roles>
                <role>Committer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.build.timestamp.format>MMMM dd yyyy</maven.build.timestamp.format>

        <jmockit.version>1.49</jmockit.version>
        <jakarta-api.version>2.1.1</jakarta-api.version>
        <jakarta.mail.version>2.0.1</jakarta.mail.version>
        <junit.version>4.13.2</junit.version>
        <slf4j.version>2.0.6</slf4j.version>

        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-javadoc-plugin.version>2.8</maven-javadoc-plugin.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>org.subethamail.smtp.Version</mainClass>
                            <packageName>org.subethamail.smtp</packageName>
                        </manifest>
                        <manifestEntries>
                            <Specification-Version>${project.version}</Specification-Version>
                            <Implementation-Version>${maven.build.timestamp}</Implementation-Version>
                            <url>${project.url}</url>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>
                        -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.jmockit</groupId>
            <artifactId>jmockit</artifactId>
            <version>${jmockit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <type>jar</type>
            <scope>test</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>jakarta.activation</groupId>
            <artifactId>jakarta.activation-api</artifactId>
            <version>${jakarta-api.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>${jakarta-api.version}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.mail</groupId>
            <artifactId>jakarta.mail-api</artifactId>
            <version>${jakarta-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.angus</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>${jakarta.mail.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>1.3.9</version>
            <type>jar</type>
        </dependency>
    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>
</project>
